--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -47,6 +47,9 @@ jobs:
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
           haxelib install actuate 
           haxelib list
+          
+      - name: build log
+        run: |
           haxelib run lime build linux
           
       - uses: actions/upload-artifact@v2
